Fix issues on mobile

--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -138,6 +138,7 @@ header {
         justify-content: space-evenly;
         background-color: var(--color-bg);
         opacity: 0;
+        display: none;
         transform: translateX(100%);
         transition: var(--transition-primary);
         @media (max-width: 500px) {
@@ -148,12 +149,12 @@ header {
           height: 90vh;
         }
         @media (max-width: 415px) {
-          top: 10vh;
+          top: 12vh;
           height: 65vh;
           gap: 2.5rem;
         }
         @media (max-width: 375px) {
-          top: 12.5vh;
+          top: 13.5vh;
         }
         @media (max-width: 320px) {
           top: 16vh;
@@ -164,9 +165,8 @@ header {
         }
       }
       .nav-active {
-        // display: flex;
+        display: flex;
         opacity: 1;
-
         transform: translateX(0%);
       }
       .burger {
